# Binder

./: Cargo.toml  about.toml  license  manifest.toml  readme.md
crates/binder_client/: Cargo.toml
crates/binder_client/src/: lib.rs  protocol.rs
crates/binder_client/src/platform/: linux.rs  mochios.rs  mod.rs
crates/binder_protocol/: Cargo.toml
resources/apps/Example.app/: about.toml
resources/apps/Hello.app/: about.toml
resources/apps/Test.App/: about.toml
resources/apps/Test.app/: about.toml
src/: apps.rs  desktop.rs  ipc.rs  main.rs
src/platform/: linux.rs  mochios.rs  mod.rs
src/platform/linux/: transport.rs
src/ui/: about.rs  cursor.rs  desktop.rs  dock.rs  menu.rs  mod.rs  popup_menu.rs  test.rs  top_bar.rs  window.rs  window_decoration.rs  window_layer.rs
src/window/: model.rs
