[workspace]
members = [
    ".",
    "crates/binder_client",
]

[package]
name = "binder"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["develop"]
develop = []
mochios = []

[dependencies]
viewkit = "0.3.3"
binder_client = { path = "crates/binder_client" }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"